--- a/src/buy.html
+++ b/src/buy.html
@@ -64,7 +64,7 @@
 			<div class="problem">
 				<p>Остались вопросы или не нашли свой документ?</p>
 				<h4 class="big__title">Оставьте заявку и мы свяжемся с Вами для уточнения</h4>
-				<button class="btn js_take_form">получить консультацию</button>
+				<button type="submit" class="btn js_take_form">получить консультацию</button>
 				//= includes/diplom.html
 			</div>
 		</div>
