--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>index</title>
 	//= includes/head.html
-	<link rel="stylesheet" media="all"  href="css/lightbox.css">
+	<link rel="stylesheet" media="all" href="css/lightbox.css" >
 </head>
 <body>
 <!-- BEGIN out-->
@@ -16,33 +16,33 @@
 	<!-- begin l_container  -->
 	<div class="l_container">
 		<div class="content">
-			<div class="long__box">
+			<div class="box_long">
 				<h3 class="content__title">Купить диплом об образовании государственного образца</h3>
 				<p>Задача организации, в особенности же консультация с широким активом в значительной степени обуславливает создание существенных финансовых и административных условий. Повседневная практика показывает, что начало повседневной работы по формированию позиции требуют от нас анализа позиций, занимаемых участниками в отношении поставленных задач. Повседневная практика показывает, что сложившаяся структура организации обеспечивает широкому кругу (специалистов) участие в формировании форм развития. </p>
 			</div>
-			<div class="short__box">
-				<img src="../img/a1.jpg" alt="">
-			</div>
-			<div class="half__box">
+			<div class="box_long">
+				<div class="box_short get_left" >
+					<img src="../img/a1.jpg" alt="">
+				</div>
 				<h3 class="content__title">Купить диплом об образовании</h3>
-				<p>Значимость этих проблем настолько очевидна, что постоянный количественный рост и сфера нашей активности требуют определения и уточнения новых предложений. Разнообразный и богатый опыт реализация намеченных плановых заданий позволяет оценить значение существенных финансовых и административных условий. Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции влечет за собой процесс внедрения и модернизации системы.</p>
+				<p>Значимость этих проблем настолько очевидна, что постоянный количественный рост и сфера нашей активности требуют определения и уточнения новых предложений. Разнообразный и богатый опыт реализация намеченных плановых заданий позволяет оценить значение существенных финансовых и административных условий. Идейные соображения высшего порядка, а также </p>
 			</div>
-			<div class="short__box">
+			<div class="box_short">
 				<h3 class="content__title">Купить диплом ВУЗа</h3>
 				<p>Таким образом новая модель организационной деятельности представляет собой интересный эксперимент проверки систем массового участия. Разнообразный опыт реализация намеченных плановых заданий способствует подготовки и реализации систем массового участия. </p>
 				<a href="#" class="more">Подробнее</a>
 			</div>
-			<div class="half__box">
+			<div class="box_half">
 				<h3 class="content__title">Купить диплом колледжа</h3>
 				<p>Разнообразный опыт реализация намеченных плановых заданий способствует подготовки и реализации систем массового участия. Значимость этих проблем настолько очевидна, что консультация с широким активом позволяет выполнять важные задания по разработке новых предложений.</p>
 				<a href="#" class="more">Подробнее</a>
 			</div>
-			<div class="short__box">
+			<div class="box_short">
 				<h3 class="content__title">Купить диплом ВУЗа</h3>
 				<p>Таким образом новая модель организационной деятельности представляет собой интересный эксперимент проверки систем массового участия. Разнообразный опыт реализация намеченных плановых заданий способствует подготовки и реализации систем массового участия. </p>
 				<a href="#" class="more">Подробнее</a>
 			</div>
-			<div class="half__box">
+			<div class="box_half">
 				<h3 class="content__title">Купить диплом колледжа</h3>
 				<p>Разнообразный опыт реализация намеченных плановых заданий способствует подготовки и реализации систем массового участия. Значимость этих проблем настолько очевидна, что консультация с широким активом позволяет выполнять важные задания по разработке новых предложений.</p>
 				<a href="#" class="more">Подробнее</a>
@@ -68,7 +68,7 @@
 			<div class="problem">
 				<p>Остались вопросы или не нашли свой документ?</p>
 				<h4 class="big__title">Оставьте заявку и мы свяжемся с Вами для уточнения</h4>
-				<button class="btn js_take_form">получить консультацию</button>
+				<button type="submit" class="btn js_take_form">получить консультацию</button>
 			</div>
 		</div>
 		<!-- end contant-->
