--- a/src/news.html
+++ b/src/news.html
@@ -18,29 +18,29 @@
 		<div class="content">
 			<h4 class="big__title">Новости</h4>
 			<div class="new__wrap">
-				<div class="long__box">
+				<div class="box_long">
 					<img src="img/a1.jpg" alt="" class="img__post">
-					<p>Таким образом начало повседневной работы по формированию позиции способствует подготовки и реализации систем массового участия. Товарищи! постоянный количественный рост и сфера нашей активности влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности в значительной степени обуславливает создание модели развития.</p>
+					<p>Таким образом начало повседневной работы по формированию позиции способствует подготовки и реализации систем массового участия. Товарищи! постоянный количественный рост и сфера нашей активности влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности в </p>
 					<a href="#" class="more">Подробнее</a>
 				</div>
-				<div class="long__box">
+				<div class="box_long">
 					<img src="img/a1.jpg" alt="" class="img__post">
-					<p>Таким образом начало повседневной работы по формированию позиции способствует подготовки и реализации систем массового участия. Товарищи! постоянный количественный рост и сфера нашей активности влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности в значительной степени обуславливает создание модели развития.</p>
+					<p>Таким образом начало повседневной работы по формированию позиции способствует подготовки и реализации систем массового участия. Товарищи! постоянный количественный рост и сфера нашей активности влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности в </p>
 					<a href="#" class="more">Подробнее</a>
 				</div>
-				<div class="long__box">
+				<div class="box_long">
 					<img src="img/a1.jpg" alt="" class="img__post">
-					<p>Таким образом начало повседневной работы по формированию позиции способствует подготовки и реализации систем массового участия. Товарищи! постоянный количественный рост и сфера нашей активности влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности в значительной степени обуславливает создание модели развития.</p>
+					<p>Таким образом начало повседневной работы по формированию позиции способствует подготовки и реализации систем массового участия. Товарищи! постоянный количественный рост и сфера нашей активности влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности в </p>
 					<a href="#" class="more">Подробнее</a>
 				</div>
-				<div class="long__box">
+				<div class="box_long">
 					<img src="img/a1.jpg" alt="" class="img__post">
-					<p>Таким образом начало повседневной работы по формированию позиции способствует подготовки и реализации систем массового участия. Товарищи! постоянный количественный рост и сфера нашей активности влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности в значительной степени обуславливает создание модели развития.</p>
+					<p>Таким образом начало повседневной работы по формированию позиции способствует подготовки и реализации систем массового участия. Товарищи! постоянный количественный рост и сфера нашей активности влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности в </p>
 					<a href="#" class="more">Подробнее</a>
 				</div>
-				<div class="long__box">
+				<div class="box_long">
 					<img src="img/a1.jpg" alt="" class="img__post">
-					<p>Таким образом начало повседневной работы по формированию позиции способствует подготовки и реализации систем массового участия. Товарищи! постоянный количественный рост и сфера нашей активности влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности в значительной степени обуславливает создание модели развития.</p>
+					<p>Таким образом начало повседневной работы по формированию позиции способствует подготовки и реализации систем массового участия. Товарищи! постоянный количественный рост и сфера нашей активности влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности в </p>
 					<a href="#" class="more">Подробнее</a>
 				</div>
 			</div>
@@ -52,7 +52,7 @@
 			</div>
 			<div class="problem small_p">
 				<p>Остались вопросы или не нашли свой документ? Оставьте заявку и мы свяжемся с Вами для уточнения</p>
-				<button class="btn js_take_form">получить консультацию</button>
+				<button type="submit" class="btn js_take_form">получить консультацию</button>
 			</div>
 			//= includes/diplom.html
 		</div>
