--- a/src/popup_senks.html
+++ b/src/popup_senks.html
@@ -69,7 +69,7 @@
 			<div class="problem">
 				<p>Остались вопросы или не нашли свой документ?</p>
 				<h4 class="big__title">Оставьте заявку и мы свяжемся с Вами для уточнения</h4>
-				<button class="btn js_take_form">получить консультацию</button>
+				<button type="submit" class="btn js_take_form">получить консультацию</button>
 			</div>
 		</div>
 		<!-- end contant-->
@@ -107,7 +107,7 @@
 					<a href="#">Екатеринбург</a>
 				</p>
 			</div>
-			<button class="btn">заказать звонок</button>
+			<button type="submit" class="btn">заказать звонок</button>
 		</div>
 	</div>
 </div>
@@ -132,8 +132,8 @@
 	</dl>
 	<h4 class="popup_title_small">Или укажите в поле:</h4>
 	<form action="" class="my_town">
-		<input type="text" name=""  id="">
-		<button class="btn_blue">Это мой город!</button>
+		<input required type="text" name=""  id="">
+		<button type="submit" class="btn_blue">Это мой город!</button>
 	</form>
 </div>
 
@@ -142,17 +142,17 @@
 	<form action="" class="popup__form">
 		<div class="popup__form_name">
 			<label for="name">Имя:</label>
-			<input type="text" name="name" id="" placeholder="Введите ваше имя">
+			<input required type="text" name="name" id="" placeholder="Введите ваше имя">
 		</div>
 		<div class="popup__form_tel">
 			<label for="tel">Телефон:</label>
-			<input type="text" name="tel" id="" placeholder="Контактный номер">
+			<input required type="text" name="tel" id="" placeholder="Контактный номер">
 		</div>
 		<div class="popup__form_area">
 			<label for="area">Комментарий:</label>
 			<textarea name="area" placeholder='Ваш комментарий'></textarea>
 		</div>
-		<button class="btn">получить консультацию</button>
+		<button type="submit" class="btn">получить консультацию</button>
 	</form>
 </div>
 
