--- a/src/contact.html
+++ b/src/contact.html
@@ -32,8 +32,8 @@
 					</a>
 					<div class="contact__tel">
 						<i class="icon_tel"></i>
-						<a href="#">+7 (333)<span> 000-00-00</span></a>
-						<a href="#">+7 (900)<span> 000-00-00</span></a>
+						<a href="tel:+73330000000">+7 (333)<span> 000-00-00</span></a>
+						<a href="tel:+79000000000">+7 (900)<span> 000-00-00</span></a>
 					</div>
 					<div class="mail">
 						<i class="icon_mail"></i>
@@ -41,11 +41,11 @@
 					</div>
 				</div>
 				<div class="contact__form">
-					<input type="text" name="" class="contact__form_name" placeholder="Ваше имя">
-					<input type="text" name="" class="contact__form_mail" placeholder="Ваш E-mail">
-					<input type="text" name="" class="contact__form_theme" placeholder="Укажите тему">
+					<input required type="text" name="" class="contact__form_name" placeholder="Ваше имя">
+					<input required type="text" name="" class="contact__form_mail" placeholder="Ваш E-mail">
+					<input required type="text" name="" class="contact__form_theme" placeholder="Укажите тему">
 					<textarea name="" class="contact__form_textarea" placeholder="Текст Вашего сообщения"></textarea>
-					<button class="btn">отправить сообщение</button>
+					<button type="submit" class="btn">отправить сообщение</button>
 				</div>
 			</div>
 		</div>
