--- a/src/contact.html
+++ b/src/contact.html
@@ -27,7 +27,7 @@
 			<div class="contant__contact">
 				<div class="contant__contact_tel">
 					<a href="#" class="logo">
-						<img src="../img/logo.png" alt="">
+						<img src="img/logo.png" alt="">
 						<h1 class="logo_text">Dokymentov.net</h1>
 					</a>
 					<div class="contact__tel">
@@ -71,7 +71,7 @@
 					<li><a href="#">Отзывы</a></li>
 				</ul>
 			</div>
-			<img src="../img/vjt.png" alt="">
+			<img src="img/vjt.png" alt="">
 		</div>
 		<div class="clear"></div>
 			//= includes/diplom_long.html
