--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 			</div>
 			<div class="box_long">
 				<div class="box_short get_left" >
-					<img src="../img/a1.jpg" alt="">
+					<img src="img/a1.jpg" alt="">
 				</div>
 				<h3 class="content__title">Купить диплом об образовании</h3>
 				<p>Значимость этих проблем настолько очевидна, что постоянный количественный рост и сфера нашей активности требуют определения и уточнения новых предложений. Разнообразный и богатый опыт реализация намеченных плановых заданий позволяет оценить значение существенных финансовых и административных условий. Идейные соображения высшего порядка, а также </p>
