--- a/src/popup_senks.html
+++ b/src/popup_senks.html
@@ -21,7 +21,7 @@
 				<p>Задача организации, в особенности же консультация с широким активом в значительной степени обуславливает создание существенных финансовых и административных условий. Повседневная практика показывает, что начало повседневной работы по формированию позиции требуют от нас анализа позиций, занимаемых участниками в отношении поставленных задач. Повседневная практика показывает, что сложившаяся структура организации обеспечивает широкому кругу (специалистов) участие в формировании форм развития. </p>
 			</div>
 			<div class="short__box">
-				<img src="../img/a1.jpg" alt="">
+				<img src="img/a1.jpg" alt="">
 			</div>
 			<div class="half__box">
 				<h3 class="content__title">Купить диплом об образовании</h3>
@@ -83,7 +83,7 @@
 	<div class="l_container">
 		<div class="footer__left">
 			<a href="#" class="logo">
-				<img src="../img/logo.png" alt="">
+				<img src="img/logo.png" alt="">
 				<h1 class="logo_text">Dokymentov.net</h1>
 			</a>
 			<div class="big_title">
